Add config MACH_VICTORY.

--- a/arch/arm/configs/cyanogenmod_epicmtd_defconfig
+++ b/arch/arm/configs/cyanogenmod_epicmtd_defconfig
@@ -356,7 +356,8 @@ CONFIG_S5PV210_SD_CH0_8BIT=y
 # CONFIG_MACH_SMDKV210 is not set
 # CONFIG_MACH_TORBRECK is not set
 CONFIG_S5PV210_PM=y
-CONFIG_MACH_HERRING=y
+# CONFIG_MACH_HERRING is not set
+CONFIG_MACH_VICTORY=y
 CONFIG_S5PV210_SETUP_FB=y
 CONFIG_S5P_ADC=y
 CONFIG_S5PV210_SETUP_FIMC0=y
