--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -1327,6 +1327,19 @@ config PL310_ERRATA_769419
 
 endmenu
 
+menu "Samsung Kernel Debug Features"
+
+choice
+        prompt "Enable Samsung Kernel Debug Features"
+        default KERNEL_DEBUG_SEC
+
+config KERNEL_DEBUG_SEC
+        bool "KERNEL_DEBUG_SEC"
+
+endchoice
+
+endmenu
+
 menu "Kernel Features"
 
 source "kernel/time/Kconfig"
