--- a/arch/arm/configs/cyanogenmod_epicmtd_defconfig
+++ b/arch/arm/configs/cyanogenmod_epicmtd_defconfig
@@ -418,6 +418,11 @@ CONFIG_ARM_AMBA=y
 # CONFIG_PCCARD is not set
 
 #
+# Samsung Kernel Debug Features
+#
+CONFIG_KERNEL_DEBUG_SEC=y
+
+#
 # Kernel Features
 #
 CONFIG_TICK_ONESHOT=y
@@ -1665,11 +1670,10 @@ CONFIG_VIDEO_IR_I2C=y
 # CONFIG_VIDEO_NOON010PC30 is not set
 # CONFIG_SOC_CAMERA is not set
 # CONFIG_VIDEO_SAMSUNG_S5P_FIMC is not set
+CONFIG_VIDEO_CE147=y
 CONFIG_VIDEO_S5KA3DFX=y
-CONFIG_VIDEO_S5K4ECGX=y
-# CONFIG_VIDEO_S5K4ECGX_DEBUG is not set
-CONFIG_VIDEO_S5K4ECGX_V_1_0=y
-CONFIG_VIDEO_S5K4ECGX_V_1_1=y
+# CONFIG_VIDEO_S5K4ECGX is not set
+# CONFIG_VIDEO_S5K5CCGX is not set
 CONFIG_VIDEO_SAMSUNG=y
 CONFIG_VIDEO_SAMSUNG_V4L2=y
 CONFIG_VIDEO_FIMC=y
