--- a/arch/arm/configs/cyanogenmod_epicmtd_defconfig
+++ b/arch/arm/configs/cyanogenmod_epicmtd_defconfig
@@ -289,6 +289,7 @@ CONFIG_S3C_GPIO_SPACE=0
 CONFIG_S3C_GPIO_TRACK=y
 # CONFIG_S3C_ADC is not set
 CONFIG_S3C_DEV_HSMMC=y
+CONFIG_S3C_DEV_HSMMC1=y
 CONFIG_S3C_DEV_HSMMC2=y
 CONFIG_S3C_DEV_HSMMC3=y
 CONFIG_S3C_DEV_I2C1=y
@@ -340,7 +341,7 @@ CONFIG_S5PV210_CORESIGHT=y
 #
 # Use 8-bit bus width
 #
-CONFIG_S5PV210_SD_CH0_8BIT=y
+# CONFIG_S5PV210_SD_CH0_8BIT is not set
 # CONFIG_S5PV210_SD_CH2_8BIT is not set
 
 #
