CSIS: fixes, USB: fixes, partial update.

--- a/arch/arm/configs/cyanogenmod_epicmtd_defconfig
+++ b/arch/arm/configs/cyanogenmod_epicmtd_defconfig
@@ -316,7 +316,7 @@ CONFIG_S5P_HRT=y
 # System MMU
 #
 CONFIG_S5P_DEV_ONENAND=y
-CONFIG_S5P_DEV_CSIS0=y
+# CONFIG_S5P_DEV_CSIS0=n
 CONFIG_S5P_SETUP_MIPIPHY=y
 CONFIG_S5P_DEV_FB=y
 CONFIG_S5P_HIGH_RES_TIMERS=y
@@ -364,6 +364,7 @@ CONFIG_S5P_ADC=y
 CONFIG_S5PV210_SETUP_FIMC0=y
 CONFIG_S5PV210_SETUP_FIMC1=y
 CONFIG_S5PV210_SETUP_FIMC2=y
+CONFIG_S5PV210_SETUP_CSIS=y
 CONFIG_WIFI_CONTROL_FUNC=y
 
 #
@@ -1880,6 +1881,9 @@ CONFIG_USB_GADGET_DUALSPEED=y
 # CONFIG_USB_G_PRINTER is not set
 CONFIG_USB_G_ANDROID=y
 # CONFIG_USB_ANDROID_RNDIS_DWORD_ALIGNED is not set
+CONFIG_USB_ANDROID_SAMSUNG_COMPOSITE=y
+# CONFIG_USB_ANDROID_SAMSUNG_ESCAPE is not set
+# CONFIG_CONFIG_USB_ANDROID_SAMSUNG_RNDIS_WITH_MS_COMPOSITE is not set
 # CONFIG_USB_CDC_COMPOSITE is not set
 # CONFIG_USB_G_NOKIA is not set
 # CONFIG_USB_G_MULTI is not set
