--- a/arch/arm/mach-s5pv210/Kconfig
+++ b/arch/arm/mach-s5pv210/Kconfig
@@ -267,7 +267,6 @@ config MACH_VICTORY
 	select S3C_DEV_HSMMC3 if !S5PV210_SD_CH2_8BIT
 	select S5PV210_SETUP_SDHCI
 	select S5PV210_POWER_DOMAIN
-	select S5P_DEV_CSIS0
 	select S5P_SETUP_MIPIPHY
 	help
 	  Machine support for Victory
@@ -306,6 +305,13 @@ config S5PV210_SETUP_FIMC2
 	default y
 	help
 	  Common setup code for FIMC controller 2.
+
+config S5PV210_SETUP_CSIS
+	bool
+	depends on VIDEO_FIMC
+	default y
+	help
+	  Common setup code for MIPI-CSIS
 
 config WIFI_CONTROL_FUNC
        bool "Enable WiFi control function abstraction"
