--- a/drivers/usb/gadget/Kconfig
+++ b/drivers/usb/gadget/Kconfig
@@ -1001,6 +1001,30 @@ config USB_ANDROID_RNDIS_DWORD_ALIGNED
         help
 	  Provides dword aligned for DMA controller.
 
+config USB_ANDROID_SAMSUNG_COMPOSITE
+        boolean "Samsung Composite function"
+        depends on USB_G_ANDROID
+        help
+          Provides SAMSUNG composite driver using ACM, UMS, ADB, MTP, RNDIS
+
+config USB_ANDROID_SAMSUNG_ESCAPE
+        boolean "Use escape usb host driver in PC side."
+        depends on USB_ANDROID_SAMSUNG_COMPOSITE
+        help
+          If you enable this option, the device will setting custom IAD for Escape driver.
+
+config CONFIG_USB_ANDROID_SAMSUNG_RNDIS_WITH_MS_COMPOSITE
+        boolean "Use RNDIS with ms composite in PC side."
+        depends on USB_ANDROID_SAMSUNG_COMPOSITE
+        help
+          If you enable this option, the device will setting custom IAD for to use ms composite.
+
+config USB_ANDROID_SAMSUNG_MTP
+        boolean "Samsung MTP function"
+        depends on USB_G_ANDROID
+        help
+          Provides Media Transfer Protocol (MTP) support for samsung gadget driver.
+
 config USB_CDC_COMPOSITE
 	tristate "CDC Composite Device (Ethernet and ACM)"
 	depends on NET
