--- a/arch/arm/configs/cyanogenmod_epicmtd_defconfig
+++ b/arch/arm/configs/cyanogenmod_epicmtd_defconfig
@@ -333,6 +333,8 @@ CONFIG_S5PV210_SETUP_SDHCI=y
 CONFIG_S5PV210_SETUP_SDHCI_GPIO=y
 CONFIG_S5PV210_POWER_DOMAIN=y
 CONFIG_S5PV210_CORESIGHT=y
+CONFIG_DDR_RAM_3G=y
+# CONFIG_DDR_RAM_2G is not set
 
 #
 # MMC/SD slot setup
