--- a/arch/arm/mach-s5pv210/Makefile
+++ b/arch/arm/mach-s5pv210/Makefile
@@ -37,6 +37,7 @@ obj-$(CONFIG_MACH_HERRING)	+= herring-touchkey-led.o
 obj-$(CONFIG_MACH_HERRING)	+= dev-herring-phone.o
 
 obj-$(CONFIG_MACH_VICTORY)	+= mach-victory.o
+obj-$(CONFIG_MACH_VICTORY)	+= aries-btlpm.o
 
 # device support
 
