--- a/arch/arm/configs/cyanogenmod_epicmtd_defconfig
+++ b/arch/arm/configs/cyanogenmod_epicmtd_defconfig
@@ -1106,7 +1106,7 @@ CONFIG_PN544=y
 # CONFIG_BLX is not set
 CONFIG_GENERIC_BLN=y
 CONFIG_BLD=y
-CONFIG_TOUCH_WAKE=y
+CONFIG_TOUCH_WAKE=n
 CONFIG_LIVE_OC=y
 CONFIG_CUSTOM_VOLTAGE=y
 CONFIG_HAVE_IDE=y
