--- a/arch/arm/mach-s5pv210/Makefile
+++ b/arch/arm/mach-s5pv210/Makefile
@@ -40,6 +40,7 @@ obj-$(CONFIG_MACH_VICTORY)	+= mach-victory.o aries-rfkill.o
 obj-$(CONFIG_MACH_VICTORY)	+= aries-btlpm.o
 obj-$(CONFIG_MACH_VICTORY)	+= aries-watchdog.o
 obj-$(CONFIG_MACH_VICTORY)	+= aries-panel.o
+obj-$(CONFIG_MACH_VICTORY)	+= max8893_consumer.o
 
 # device support
 
