--- a/arch/arm/mach-s5pv210/Makefile
+++ b/arch/arm/mach-s5pv210/Makefile
@@ -42,6 +42,7 @@ obj-$(CONFIG_MACH_VICTORY)	+= aries-watchdog.o
 obj-$(CONFIG_MACH_VICTORY)	+= aries-panel.o
 obj-$(CONFIG_MACH_VICTORY)	+= max8893_consumer.o
 obj-$(CONFIG_MACH_VICTORY)  += sec_switch.o
+obj-$(CONFIG_MACH_VICTORY)	+= dev-aries-phone.o
 
 # device support
 
