Misc defconfig changes.

--- a/arch/arm/configs/cyanogenmod_epicmtd_defconfig
+++ b/arch/arm/configs/cyanogenmod_epicmtd_defconfig
@@ -103,6 +103,8 @@ CONFIG_RD_GZIP=y
 # CONFIG_RD_LZMA is not set
 # CONFIG_RD_XZ is not set
 # CONFIG_RD_LZO is not set
+CONFIG_INITRAMFS_COMPRESSION_NONE=y
+# CONFIG_INITRAMFS_COMPRESSION_GZIP is not set
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
@@ -1106,7 +1108,7 @@ CONFIG_PN544=y
 # CONFIG_BLX is not set
 CONFIG_GENERIC_BLN=y
 CONFIG_BLD=y
-CONFIG_TOUCH_WAKE=n
+# CONFIG_TOUCH_WAKE is not set
 CONFIG_LIVE_OC=y
 CONFIG_CUSTOM_VOLTAGE=y
 CONFIG_HAVE_IDE=y
@@ -1679,7 +1681,6 @@ CONFIG_VIDEO_IR_I2C=y
 CONFIG_VIDEO_CE147=y
 CONFIG_VIDEO_S5KA3DFX=y
 # CONFIG_VIDEO_S5K4ECGX is not set
-# CONFIG_VIDEO_S5K5CCGX is not set
 CONFIG_VIDEO_SAMSUNG=y
 CONFIG_VIDEO_SAMSUNG_V4L2=y
 CONFIG_VIDEO_FIMC=y
@@ -1750,7 +1751,7 @@ CONFIG_FB_CFB_IMAGEBLIT=y
 # Frame buffer hardware drivers
 #
 CONFIG_FB_S3C=y
-CONFIG_FB_S3C_INCREASED_HZ=y
+# CONFIG_FB_S3C_INCREASED_HZ is not set
 # CONFIG_FB_S3C_SPLASH_SCREEN is not set
 CONFIG_FB_S3C_LCD_INIT=y
 # CONFIG_FB_S3C_DEBUG is not set
