--- a/arch/arm/configs/cyanogenmod_epicmtd_defconfig
+++ b/arch/arm/configs/cyanogenmod_epicmtd_defconfig
@@ -925,8 +925,7 @@ CONFIG_WIRELESS_EXT_SYSFS=y
 #
 # CFG80211 needs to be enabled for MAC80211
 #
-CONFIG_WIMAX=y
-CONFIG_WIMAX_DEBUG_LEVEL=8
+# CONFIG_WIMAX is not set
 CONFIG_RFKILL=y
 CONFIG_RFKILL_PM=y
 CONFIG_RFKILL_INPUT=y
@@ -1187,6 +1186,8 @@ CONFIG_NETDEV_1000=y
 # CONFIG_STMMAC_ETH is not set
 CONFIG_NETDEV_10000=y
 CONFIG_WLAN=y
+CONFIG_WIMAX_VICTORY=y
+CONFIG_WIMAX_GPIO_VICTORY=y
 CONFIG_BCM4329=m
 CONFIG_BCM4329_FW_PATH="/vendor/firmware/fw_bcm4329.bin"
 CONFIG_BCM4329_NVRAM_PATH="/vendor/firmware/nvram_net.txt"
@@ -1197,13 +1198,6 @@ CONFIG_BCM4329_PMFAST=y
 #
 # WiMAX Wireless Broadband devices
 #
-
-#
-# Enable USB support to see WiMAX USB drivers
-#
-# CONFIG_WIMAX_I2400M_SDIO is not set
-CONFIG_WIMAX_CMC7XX=y
-# CONFIG_WIMAX_CMC7XX_DEBUG is not set
 # CONFIG_WAN is not set
 
 #
