--- a/arch/arm/configs/cyanogenmod_epicmtd_defconfig
+++ b/arch/arm/configs/cyanogenmod_epicmtd_defconfig
@@ -1022,7 +1022,8 @@ CONFIG_MTD_CFI_I2=y
 CONFIG_MTD_ONENAND=y
 # CONFIG_MTD_ONENAND_VERIFY_WRITE is not set
 # CONFIG_MTD_ONENAND_GENERIC is not set
-CONFIG_MTD_ONENAND_SAMSUNG=y
+# CONFIG_MTD_ONENAND_SAMSUNG is not set
+CONFIG_MTD_ONENAND_SAMSUNG_AUDI=y
 # CONFIG_MTD_ONENAND_OTP is not set
 # CONFIG_MTD_ONENAND_2X_PROGRAM is not set
 # CONFIG_MTD_ONENAND_SIM is not set
@@ -2053,6 +2054,15 @@ CONFIG_MACH_NO_WESTBRIDGE=y
 # Altera FPGA firmware download module
 #
 # CONFIG_ALTERA_STAPL is not set
+CONFIG_SAMSUNG_PHONE_TTY=y
+CONFIG_ONEDRAM_READ_FILE=y
+# CONFIG_ONEDRAM_READ_FSR is not set
+CONFIG_ONEDRAM_DGSINFO=y
+CONFIG_ONEDRAM_HWREV=y
+CONFIG_ONEDRAM_TX_RETRY=10
+# CONFIG_ONEDRAM_CHECKBIT is not set
+# CONFIG_ONEDRAM_IRQPENDING is not set
+# CONFIG_ONEDRAM_IRQ_PENDING is not set
 
 #
 # File systems
@@ -2134,6 +2144,7 @@ CONFIG_YAFFS_YAFFS2=y
 CONFIG_YAFFS_AUTO_YAFFS2=y
 # CONFIG_YAFFS_DISABLE_TAGS_ECC is not set
 # CONFIG_YAFFS_ALWAYS_CHECK_CHUNK_ERASED is not set
+CONFIG_YAFFS_SHORT_NAMES_IN_RAM=y
 # CONFIG_YAFFS_EMPTY_LOST_AND_FOUND is not set
 # CONFIG_YAFFS_DISABLE_BLOCK_REFRESHING is not set
 # CONFIG_YAFFS_DISABLE_BACKGROUND is not set
