--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -119,6 +119,9 @@ obj-$(CONFIG_VLYNQ)		+= vlynq/
 obj-$(CONFIG_STAGING)		+= staging/
 obj-y				+= platform/
 obj-y				+= ieee802154/
+obj-$(CONFIG_SAMSUNG_PHONE_TTY) += onedram/
+obj-y				+= level/
+obj-y				+= param/
 #common clk code
 obj-y				+= clk/
 
