Remove S5PV210_CORESIGHT.

--- a/arch/arm/mach-s5pv210/Kconfig
+++ b/arch/arm/mach-s5pv210/Kconfig
@@ -111,7 +111,7 @@ endchoice
 config S5PV210_CORESIGHT
 	bool "Coresight"
 	select OC_ETM
-	default y
+	default n
 	help
 	  Support embedded trace cell
 
