--- a/arch/arm/configs/cyanogenmod_epicmtd_defconfig
+++ b/arch/arm/configs/cyanogenmod_epicmtd_defconfig
@@ -1266,6 +1266,14 @@ CONFIG_KEYBOARD_ATKBD=y
 # CONFIG_KEYBOARD_SUNKBD is not set
 # CONFIG_KEYBOARD_XTKBD is not set
 CONFIG_KEYPAD_CYPRESS_TOUCH=y
+CONFIG_KEYPAD_S3C=y
+CONFIG_KEYPAD_S3C_VICTORY=y
+# CONFIG_KEYPAD_S3C_FORTE is not set
+CONFIG_KEYPAD_S3C_EXPORT_DELAYS=y
+CONFIG_KEYPAD_S3C_SENSITIVE_PRINTKS=y
+CONFIG_S3C_KEYPAD_DEBUG=y
+CONFIG_KEYPAD_S3C_INT=y
+# CONFIG_KEYPAD_S3C_MSM is not set
 # CONFIG_INPUT_MOUSE is not set
 # CONFIG_INPUT_JOYSTICK is not set
 # CONFIG_INPUT_TABLET is not set
