--- a/drivers/input/keyboard/Kconfig
+++ b/drivers/input/keyboard/Kconfig
@@ -572,4 +572,108 @@ config KEYPAD_CYPRESS_TOUCH
 	  To compile this driver as a module, choose M here: the
 	  module will be called cypress-touchkey.
 
+config KEYPAD_S3C
+	tristate "S3C keypad support"
+	depends on CPU_S5PC100 || CPU_S5PC110 || CPU_S5P6442 || CPU_S5PV210
+	default n
+	help
+	  Say Y here if you want to use the S3C SMDK keypad.
+
+	  To compile this driver as a module, choose M here: the
+	  module will be called s3c-keypad.
+
+if KEYPAD_S3C
+
+config KEYPAD_S3C_VICTORY
+        depends on KEYPAD_S3C
+        bool "Victory S3C Keypad"
+        help
+        Victory Product
+
+config KEYPAD_S3C_FORTE
+        depends on KEYPAD_S3C
+        bool "Forte S3C Keypad"
+        help
+        Forte Product Key Board
+
+config KEYPAD_S3C_EXPORT_DELAYS
+	bool "Export keypad column-switch and timer delays via sysfs"
+	depends on KEYPAD_S3C && SYSFS
+	default y
+	help
+	  Allows runtime configuration of the keypad column-switch and timer delays
+	  via sysfs exported column_delay and timer_delay variables.
+
+	  The current delays may be read with:
+	    cat /sys/devices/platform/s3c-keypad/column_delay
+	    cat /sys/devices/platform/s3c-keypad/timer_delay
+	  and new delays may be set with:
+	    echo C > /sys/devices/platform/s3c-keypad/column_delay
+	    echo T > /sys/devices/platform/s3c-keypad/timer_delay
+	  where C is the column-switch delay (µs) and T the timer delay (jiffies).
+
+	  A timer delay of "1" yields the shortest timer, and the most responsive
+	  keypad possible, whereas a delay of HZ (e.g., "256") is the longest
+	  allowed.  For HZ=256, a delay of "7" (3*HZ/100) is default.
+
+	  A column-switch delay of "1" is the most efficient (0.02% CPU util.) but
+	  results in ghost key presses across columns (rows).  The default "300" is
+	  very inefficient, 6.9% CPU util., for a timer delay of "7".  Values of
+	  "50" (1.4% CPU) and even "5" (0.2% CPU) work well without ghosting.  This
+	  delay affects efficiency only, not responsiveness.
+
+config KEYPAD_S3C_SENSITIVE_PRINTKS
+	bool "Disable sensitive printks and allow them to be reenabled via sysfs"
+	depends on KEYPAD_S3C && SYSFS
+	default y
+	help
+	  Disables writing of sensitive (e.g., keycode) information to the kernel
+	  message ring buffer.  Also adds a sysfs variable (sensitive_printks) to
+	  allow sensitive printks to be (temporarily) reenabled for debugging
+	  purposes.
+
+	  The current sensitive_printks setting may be read with:
+	    cat /sys/devices/platform/s3c-keypad/sensitive_printks
+
+	  Sensitive printks may be reenabled with:
+	    echo 1 > /sys/devices/platform/s3c-keypad/sensitive_printks
+	  and disabled again with:
+	    echo 0 > /sys/devices/platform/s3c-keypad/sensitive_printks
+endif
+
+config S3C_KEYPAD_DEBUG
+	bool "Print debug messages for S3C keypad"
+	depends on KEYPAD_S3C
+	default n
+	help
+	  Say Y here if you want to print debug messages for S3C keypad.
+
+	  To compile this driver as a module, choose M here: the
+	  module will be called s3c-keypad.
+
+choice
+	prompt "Select keypad interface type"
+	depends on KEYPAD_S3C
+	default KEYPAD_S3C_INT
+
+config KEYPAD_S3C_INT
+	bool "Port0 : [KEYPAD : INT(8x8)]"
+	depends on KEYPAD_S3C
+	help
+	  Say Y here if you want to use the S3C SMDK keypad.(8x8)
+
+	  To compile this driver as a module, choose M here: the
+	  module will be called s3c-keypad.
+
+config KEYPAD_S3C_MSM
+	bool "Port1 : [KEYPAD : MSM(8x16)]"
+	depends on KEYPAD_S3C && CPU_S5PV210
+	help
+	  Say Y here if you want to use the S3C SMDK keypad.(8x16)
+	  To compile this driver as a module, choose M here: the
+	  module will be called s3c-keypad.
+
+endchoice
+
+
 endif
