--- a/arch/arm/configs/cyanogenmod_epicmtd_defconfig
+++ b/arch/arm/configs/cyanogenmod_epicmtd_defconfig
@@ -2347,6 +2347,7 @@ CONFIG_HAVE_ARCH_KGDB=y
 # CONFIG_STRICT_DEVMEM is not set
 # CONFIG_ARM_UNWIND is not set
 CONFIG_DEBUG_USER=y
+CONFIG_DEBUG_ERRORS=y
 # CONFIG_DEBUG_LL is not set
 CONFIG_OC_ETM=y
 CONFIG_DEBUG_S3C_UART=2
