--- a/drivers/char/Kconfig
+++ b/drivers/char/Kconfig
@@ -625,6 +625,12 @@ config RAMOOPS
 	  This enables panic and oops messages to be logged to a circular
 	  buffer in RAM where it can be read back at some later point.
 
+config S3C_MEM
+	bool "Support for /dev/s3c-mem"
+	default y
+	help
+	  you do say Y here, you can allocate physically linear memory
+
 config MSM_SMD_PKT
 	bool "Enable device interface for some SMD packet ports"
 	default n
