--- a/arch/arm/configs/cyanogenmod_epicmtd_defconfig
+++ b/arch/arm/configs/cyanogenmod_epicmtd_defconfig
@@ -293,7 +293,6 @@ CONFIG_S3C_GPIO_TRACK=y
 CONFIG_S3C_DEV_HSMMC=y
 CONFIG_S3C_DEV_HSMMC1=y
 CONFIG_S3C_DEV_HSMMC2=y
-CONFIG_S3C_DEV_HSMMC3=y
 CONFIG_S3C_DEV_I2C1=y
 CONFIG_S3C_DEV_I2C2=y
 CONFIG_S3C_DEV_WDT=y
@@ -562,6 +561,7 @@ CONFIG_WAKELOCK_STAT=y
 CONFIG_USER_WAKELOCK=y
 CONFIG_EARLYSUSPEND=y
 # CONFIG_NO_USER_SPACE_SCREEN_ACCESS_CONTROL is not set
+# CONFIG_CONSOLE_EARLYSUSPEND is not set
 CONFIG_FB_EARLYSUSPEND=y
 CONFIG_PM_SLEEP=y
 # CONFIG_PM_RUNTIME is not set
@@ -1073,9 +1073,9 @@ CONFIG_ANDROID_PMEM_MEMSIZE_PMEM_ADSP=6144
 # CONFIG_SENSORS_BH1770 is not set
 # CONFIG_SENSORS_APDS990X is not set
 # CONFIG_HMC6352 is not set
-CONFIG_SENSORS_AK8973=y
+# CONFIG_SENSORS_AK8973 is not set
 # CONFIG_SENSORS_AK8975 is not set
-CONFIG_SENSORS_KR3DM=y
+# CONFIG_SENSORS_KR3DM is not set
 # CONFIG_DS1682 is not set
 # CONFIG_TI_DAC7512 is not set
 CONFIG_UID_STAT=y
@@ -1103,7 +1103,7 @@ CONFIG_USB_SWITCH_FSA9480=y
 # CONFIG_TI_ST is not set
 # CONFIG_SENSORS_LIS3_SPI is not set
 # CONFIG_SENSORS_LIS3_I2C is not set
-CONFIG_SAMSUNG_MODEMCTL=y
+# CONFIG_SAMSUNG_MODEMCTL is not set
 CONFIG_PN544=y
 # CONFIG_BLX is not set
 CONFIG_GENERIC_BLN=y
@@ -1190,8 +1190,8 @@ CONFIG_WLAN=y
 CONFIG_WIMAX_VICTORY=y
 CONFIG_WIMAX_GPIO_VICTORY=y
 CONFIG_BCM4329=m
-CONFIG_BCM4329_FW_PATH="/vendor/firmware/fw_bcm4329.bin"
-CONFIG_BCM4329_NVRAM_PATH="/vendor/firmware/nvram_net.txt"
+CONFIG_BCM4329_FW_PATH="/system/vendor/firmware/fw_bcm4329.bin"
+CONFIG_BCM4329_NVRAM_PATH="/system/etc/wifi/nvram_net.txt"
 CONFIG_BCM4329_PMFAST=y
 # CONFIG_BCMDHD is not set
 # CONFIG_HOSTAP is not set
