More config cleanup.

--- a/arch/arm/configs/cyanogenmod_epicmtd_defconfig
+++ b/arch/arm/configs/cyanogenmod_epicmtd_defconfig
@@ -1205,14 +1205,14 @@ CONFIG_BCM4329_PMFAST=y
 # CAIF transport drivers
 #
 CONFIG_PPP=y
-# CONFIG_PPP_MULTILINK is not set
-# CONFIG_PPP_FILTER is not set
-# CONFIG_PPP_ASYNC is not set
-# CONFIG_PPP_SYNC_TTY is not set
+CONFIG_PPP_MULTILINK=y
+CONFIG_PPP_FILTER=y
+CONFIG_PPP_ASYNC=y
+CONFIG_PPP_SYNC_TTY=y
 CONFIG_PPP_DEFLATE=y
 CONFIG_PPP_BSDCOMP=y
 CONFIG_PPP_MPPE=y
-# CONFIG_PPPOE is not set
+CONFIG_PPPOE=y
 CONFIG_PPPOLAC=y
 CONFIG_PPPOPNS=y
 # CONFIG_SLIP is not set
@@ -1541,7 +1541,7 @@ CONFIG_SSB_POSSIBLE=y
 # Sonics Silicon Backplane
 #
 # CONFIG_SSB is not set
-CONFIG_BCMA_POSSIBLE=y
+# CONFIG_BCMA_POSSIBLE is not set
 
 #
 # Broadcom specific AMBA
@@ -1690,6 +1690,7 @@ CONFIG_VIDEO_IR_I2C=y
 #
 # Miscelaneous helper chips
 #
+# CONFIG_VIDEO_VIVI is not set
 # CONFIG_VIDEO_SR030PC30 is not set
 # CONFIG_VIDEO_NOON010PC30 is not set
 # CONFIG_SOC_CAMERA is not set
