--- a/arch/arm/configs/cyanogenmod_epicmtd_defconfig
+++ b/arch/arm/configs/cyanogenmod_epicmtd_defconfig
@@ -316,8 +316,6 @@ CONFIG_S5P_HRT=y
 #
 # System MMU
 #
-CONFIG_S5P_DEV_ONENAND=y
-# CONFIG_S5P_DEV_CSIS0=n
 CONFIG_S5P_SETUP_MIPIPHY=y
 CONFIG_S5P_DEV_FB=y
 CONFIG_S5P_HIGH_RES_TIMERS=y
@@ -346,6 +344,7 @@ CONFIG_DDR_RAM_3G=y
 #
 # CONFIG_S5PV210_SD_CH0_8BIT is not set
 # CONFIG_S5PV210_SD_CH2_8BIT is not set
+CONFIG_S5PC110_DEV_ONENAND=y
 
 #
 # S5PC110 Machines
@@ -683,6 +682,7 @@ CONFIG_NETFILTER_XT_TARGET_CONNMARK=y
 # CONFIG_NETFILTER_XT_TARGET_DSCP is not set
 CONFIG_NETFILTER_XT_TARGET_HL=y
 # CONFIG_NETFILTER_XT_TARGET_IDLETIMER is not set
+# CONFIG_NETFILTER_XT_TARGET_LED is not set
 CONFIG_NETFILTER_XT_TARGET_MARK=y
 CONFIG_NETFILTER_XT_TARGET_NFLOG=y
 CONFIG_NETFILTER_XT_TARGET_NFQUEUE=y
@@ -928,6 +928,7 @@ CONFIG_WIRELESS_EXT_SYSFS=y
 # CONFIG_WIMAX is not set
 CONFIG_RFKILL=y
 CONFIG_RFKILL_PM=y
+CONFIG_RFKILL_LEDS=y
 CONFIG_RFKILL_INPUT=y
 # CONFIG_RFKILL_REGULATOR is not set
 # CONFIG_RFKILL_GPIO is not set
@@ -1197,7 +1198,7 @@ CONFIG_BCM4329_PMFAST=y
 # CONFIG_HOSTAP is not set
 
 #
-# WiMAX Wireless Broadband devices
+# Enable WiMAX (Networking options) to see the WiMAX drivers
 #
 # CONFIG_WAN is not set
 
@@ -1257,6 +1258,7 @@ CONFIG_KEYBOARD_ATKBD=y
 # CONFIG_KEYBOARD_GPIO is not set
 # CONFIG_KEYBOARD_TCA6416 is not set
 # CONFIG_KEYBOARD_MATRIX is not set
+# CONFIG_KEYBOARD_LM8323 is not set
 # CONFIG_KEYBOARD_MAX7359 is not set
 # CONFIG_KEYBOARD_MCS is not set
 # CONFIG_KEYBOARD_MPR121 is not set
@@ -2115,6 +2117,7 @@ CONFIG_MACH_NO_WESTBRIDGE=y
 #
 # Speakup console speech
 #
+# CONFIG_SPEAKUP is not set
 # CONFIG_TOUCHSCREEN_CLEARPAD_TM1217 is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4 is not set
 
