--- a/arch/arm/configs/cyanogenmod_epicmtd_defconfig
+++ b/arch/arm/configs/cyanogenmod_epicmtd_defconfig
@@ -1107,11 +1107,11 @@ CONFIG_USB_SWITCH_FSA9480=y
 # CONFIG_SAMSUNG_MODEMCTL is not set
 CONFIG_PN544=y
 # CONFIG_BLX is not set
-CONFIG_GENERIC_BLN=y
-CONFIG_BLD=y
+# CONFIG_GENERIC_BLN is not set
+# CONFIG_BLD is not set
 # CONFIG_TOUCH_WAKE is not set
-CONFIG_LIVE_OC=y
-CONFIG_CUSTOM_VOLTAGE=y
+# CONFIG_LIVE_OC is not set
+# CONFIG_CUSTOM_VOLTAGE is not set
 CONFIG_HAVE_IDE=y
 # CONFIG_IDE is not set
 
